# ModelResharder-Transformers-FastAPI

./: README.md  pyproject.toml  requirements.txt
ipynb/: app.ipynb
src/: app.py
