[project]
name = "transformers-model-resharder-api"
version = "0.1.0"
description = "Transformers Model Resharder API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "transformers==5.3.0",
    "huggingface-hub>=0.24.0",
    "torch>=2.4.0",
    "accelerate>=0.33.0",
    "hypercorn==0.18.0",
    "streamlit>=1.55.0",
]
