[project]
name = "transformers-model-resharder-api"
version = "0.1.0"
description = "Transformers Model Resharder API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "transformers==5.3.0",
    "huggingface-hub==1.7.1",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "accelerate==1.13.0",
    "gradio>=6.9.0",
]

